<resources>
    <string name="app_name">Personal Page</string>
    <string name="projects">Projects</string>
    <string name="info">Info</string>
    <string name="azat_name">Azat Serzhanov\n\nazatserzhan@gmail.com</string>
    <string name="photo">photo</string>
    <string name="share_btn">Поделиться</string>
    <string name="mail_send_btn">Отправить по почте</string>
    <string name="call_btn">Позвонить</string>
    <string name="start_camera_btn">Запустить камеру</string>
</resources>